--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@ body {
 .container {
   z-index: 1;
   opacity: 0.85;
+  margin: 60px auto;
+  max-width: 900px;
 }
 
 .video-container {
@@ -25,13 +27,37 @@ body {
   top: 0;
 }
 
-h1 {
-  font-size: 50px;
+.Weather {
+  font-family: "Cerebri-Sans", Helvetica, Arial, sans-serif;
+  background: white;
+  border-radius: 16px;
+  box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
+  padding: 40px;
+  color: rgb(135, 135, 135);
+  max-width: 900px;
+  min-width: 700px;
+}
+
+.WeatherInfo h1 {
+  margin: 20px 0 10px 0;
+  line-height: 29px;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 48px;
+
   color: #885df1;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 30px;
-  opacity: 1;
+}
+
+.WeatherInfo li strong {
+  color: #f65282;
+  font-weight: normal;
+}
+.WeatherInfo .temperature {
+  color: rgb(33, 33, 33);
+  margin-left: 5px;
+  margin-left: 10px;
+  font-size: 50px;
+  line-height: 1;
 }
 
 h2 {
@@ -64,6 +90,16 @@ li {
   height: 50px;
   width: 50px;
   margin-right: 10px;
+}
+
+.unit {
+  position: relative;
+  top: -30px;
+}
+
+.col-sm-8 {
+  margin-top: 60px;
+  padding-right: 30px;
 }
 
 .temperature {
@@ -147,4 +183,9 @@ div.rainy {
 .open-source {
   color: black;
   margin-left: 10px;
+}
+
+.container-weather {
+  display: flex;
+  justify-content: space-evenly;
 }
