--- a/src/style.css
+++ b/src/style.css
@@ -156,6 +156,15 @@ ul {
   top: -30px;
 }
 
+@media (max-width: 400px) {
+  #temperature {
+    font-size: 30px;
+  }
+  #unit {
+    font-size: 10px;
+  }
+}
+
 .temperature {
   color: rgb(33, 33, 33);
   font-size: 50px;
